--- a/src/Brainf_ckSharp.UWP/App.xaml
+++ b/src/Brainf_ckSharp.UWP/App.xaml
@@ -15,6 +15,7 @@
                 <ResourceDictionary Source="Styles/ButtonsStyles.xaml"/>
                 <ResourceDictionary Source="Styles/ClassicStyles.xaml"/>
                 <ResourceDictionary Source="Styles/TelerikStyles.xaml"/>
+                <ResourceDictionary Source="Styles/TextStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
