--- a/src/Brainf_ckSharp.UWP/Controls/DataTemplates/Brainf_ckMemoryCellChunkTemplate.xaml
+++ b/src/Brainf_ckSharp.UWP/Controls/DataTemplates/Brainf_ckMemoryCellChunkTemplate.xaml
@@ -5,6 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
+    xmlns:functions="using:Brainf_ckSharp.UWP.Bindings.Functions"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -41,7 +42,7 @@
             Foreground="{ThemeResource SystemControlHighlightAccentBrush}"
             VerticalAlignment="Bottom"
             Visibility="{x:Bind ViewModel.IsChunkSelected, Mode=OneWay}"
-            Grid.Column="{x:Bind ViewModel.SelectedIndex, Mode=OneWay}">
+            Grid.Column="{x:Bind functions:NumericFunctions.IntToPositiveValueOrFallback(ViewModel.SelectedIndex, 0), Mode=OneWay}">
             <animations:Implicit.Animations>
                 <animations:Vector3Animation Target="Offset" Duration="0:0:0.4"/>
             </animations:Implicit.Animations>
