--- a/src/Brainf_ckSharp.UWP/Styles/ClassicStyles.xaml
+++ b/src/Brainf_ckSharp.UWP/Styles/ClassicStyles.xaml
@@ -1,18 +1,6 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="using:Brainf_ckSharp.UWP.Controls.Windows.UI.Xaml.Controls">
-
-    <!--Custom FixedFridView style-->
-    <Style TargetType="controls:FluentGridView">
-        <Setter Property="ItemsPanel">
-            <Setter.Value>
-                <ItemsPanelTemplate>
-                    <ItemsWrapGrid Orientation="Horizontal"/>
-                </ItemsPanelTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <!--Custom Pivot without margins and headers-->
     <Style TargetType="Pivot" x:Key="ExpandedPivotWithNoHeaderStyle">
