Added attached property for dynamic items resize

--- a/src/Brainf_ckSharp.UWP/Controls/DataTemplates/Brainf_ckMemoryCellChunkTemplate.xaml
+++ b/src/Brainf_ckSharp.UWP/Controls/DataTemplates/Brainf_ckMemoryCellChunkTemplate.xaml
@@ -20,7 +20,7 @@
     </UserControl.Resources>
 
     <!--Root-->
-    <Grid>
+    <Grid Background="#32000000">
         <Grid.RowDefinitions>
             <RowDefinition Height="12"/>
             <RowDefinition Height="Auto"/>
