--- a/src/Brainf_ckSharp.UWP/Resources/Dictionaries/MDL2Icons.xaml
+++ b/src/Brainf_ckSharp.UWP/Resources/Dictionaries/MDL2Icons.xaml
@@ -10,6 +10,7 @@
     <x:String x:Key="OperatorsKeyboardIcon">&#xE92E;</x:String>
     <x:String x:Key="QuickMemoryViewerIcon">&#xE96A;</x:String>
     <x:String x:Key="ExpanderArrowIcon">&#xE011;</x:String>
+    <x:String x:Key="MemoryViewerPositionIndicator">&#xEC11;</x:String>
 
     <!--Command bar-->
     <x:String x:Key="RunIcon">&#xE102;</x:String>
