--- a/src/Brainf_ckSharp.UWP/Resources/Dictionaries/Brushes.xaml
+++ b/src/Brainf_ckSharp.UWP/Resources/Dictionaries/Brushes.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:brushes="using:UICompositionAnimations.Brushes">
+    xmlns:brushes="using:UICompositionAnimations.Brushes"
+    xmlns:effects="using:UICompositionAnimations.Brushes.Effects">
 
     <!--Shell header background brush-->
     <brushes:AcrylicBrush
@@ -20,6 +21,23 @@
         Tint="#FF101010"
         TintMix="0.9"
         TextureUri="/Assets/Misc/noise_low.png"/>
+
+    <!--Sub page brushes-->
+    <brushes:PipelineBrush
+        x:Key="SubFrameHostBackgroundBrush"
+        FallbackColor="#C0080808">
+        <brushes:PipelineBrush.Effects>
+            <effects:AcrylicEffect
+                Source="Backdrop"
+                BlurAmount="8"
+                Tint="#FF080808"
+                TintMix="0.4"
+                TextureUri="/Assets/Misc/noise_low.png"/>
+            <effects:SaturationEffect Value="0.6"/>
+        </brushes:PipelineBrush.Effects>
+    </brushes:PipelineBrush>
+    <Color x:Key="SubFrameBackgroundColor">#FF222529</Color>
+    <SolidColorBrush x:Key="SubFrameBackgroundBrush" Color="{StaticResource SubFrameBackgroundColor}"/>
 
     <!--Commands-->
     <Color x:Key="RunColor">#FF008000</Color>
