Added developer template

--- a/src/Brainf_ckSharp.UWP/Resources/Dictionaries/Brushes.xaml
+++ b/src/Brainf_ckSharp.UWP/Resources/Dictionaries/Brushes.xaml
@@ -44,5 +44,6 @@
 
     <!--Misc-->
     <SolidColorBrush x:Key="ZeroValueInMemoryViewerBrush" Color="#D0FFFFFF"/>
+    <SolidColorBrush x:Key="GitHubContributorBackgroundBrush" Color="#FF191B1E"/>
 
 </ResourceDictionary>
