--- a/src/Brainf_ckSharp.UWP/App.xaml
+++ b/src/Brainf_ckSharp.UWP/App.xaml
@@ -10,6 +10,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls"/>
                 <ResourceDictionary Source="Resources/Dictionaries/Brushes.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionaries/IconPaths.xaml"/>
                 <ResourceDictionary Source="Resources/Dictionaries/MDL2Icons.xaml"/>
                 <ResourceDictionary Source="Resources/Dictionaries/Operators.xaml"/>
                 <ResourceDictionary Source="Styles/ButtonsStyles.xaml"/>
