--- a/src/Brainf_ckSharp.UWP/Controls/SubPages/Shell/AboutSubPage.xaml
+++ b/src/Brainf_ckSharp.UWP/Controls/SubPages/Shell/AboutSubPage.xaml
@@ -23,8 +23,10 @@
             <!--App description-->
             <controls:MarkdownTextBlock
                 x:Uid="About/AppDescription"
-                FontSize="13" IsTextSelectionEnabled="False"
-                Text="Legere is an **unofficial** client..."
+                FontSize="13"
+                IsTextSelectionEnabled="False"
+                Text="Brainf*ck# is a console and IDE for **Brainf*ck/PBrain**..."
+                Background="Transparent"
                 x:Name="DescriptionBlock"
                 RelativePanel.Below="TitleBlock"
                 Margin="0,12,0,0"/>
@@ -73,7 +75,7 @@
             <!--Developers-->
             <TextBlock
                 x:Uid="About/Developers"
-                Text="Developers" 
+                Text="Developed by" 
                 FontWeight="SemiBold" FontSize="14"
                 Margin="0,16,0,0"
                 x:Name="UWPBlock"
@@ -90,6 +92,10 @@
                 <ListView.ItemContainerStyle>
                     <Style TargetType="ListViewItem">
                         <Setter Property="Padding" Value="0,0,0,8"/>
+                        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                        <Setter Property="VerticalAlignment" Value="Stretch"/>
+                        <Setter Property="VerticalContentAlignment" Value="Stretch"/>
                     </Style>
                 </ListView.ItemContainerStyle>
                 <ListView.ItemTemplate>
